[gd_scene load_steps=3 format=3 uid="uid://dg7lvamac7dod"]

[ext_resource type="Script" uid="uid://nbqwnjmo8qv6" path="res://GDs/win_screen.gd" id="1_l2arl"]
[ext_resource type="Texture2D" uid="uid://dx35pxyav5u0h" path="res://Banners/win.png" id="2_wmwda"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l2arl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 321.99997)
scale = Vector2(0.36489898, 0.4851191)
texture = ExtResource("2_wmwda")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 710.0
offset_top = 424.0
offset_right = 997.0
offset_bottom = 525.0

[node name="Repetir" type="Button" parent="VBoxContainer"]
modulate = Color(0, 1, 1, 1)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Repetir"

[node name="Volver al menu" type="Button" parent="VBoxContainer"]
modulate = Color(0, 0.90588236, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Volver al menu"

[node name="Salir" type="Button" parent="VBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Salir"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/Repetir" to="." method="_on_repetir_pressed"]
[connection signal="pressed" from="VBoxContainer/Volver al menu" to="." method="_on_volver_al_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
